[package]
name = "gamepad_artnet"
description = "Receive gamepad events and forward via Artnet. Can be used to control QlcPlus and others"
license = "MIT/Apache-2.0"
authors = ["René Rössler <rene@freshx.de>"]
repository = "https://github.com/elwerene/gamepad_artnet.git"
version = "0.1.2"
edition = "2021"

[dependencies]
artnet_protocol = "0.4"
clap = { version = "3.1", features = ["derive"] }
crossbeam-channel = "0.5"
env_logger = "0.9"
gilrs = "0.9"
log = "0.4"
once_cell = "1.12"
